--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.2.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "build": "webpack"
-}
+  }
 }
